--- a/HelpDesk_Web/HelpDesk/HelpDesk/HelpDesk.csproj
+++ b/HelpDesk_Web/HelpDesk/HelpDesk/HelpDesk.csproj
@@ -204,6 +204,10 @@
     <Compile Include="Migrations\201805101644383_DodanieTabel.Designer.cs">
       <DependentUpon>201805101644383_DodanieTabel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201805112032573_DodanieDatyDoZgloszen.cs" />
+    <Compile Include="Migrations\201805112032573_DodanieDatyDoZgloszen.Designer.cs">
+      <DependentUpon>201805112032573_DodanieDatyDoZgloszen.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -299,6 +303,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201805101644383_DodanieTabel.resx">
       <DependentUpon>201805101644383_DodanieTabel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805112032573_DodanieDatyDoZgloszen.resx">
+      <DependentUpon>201805112032573_DodanieDatyDoZgloszen.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
