--- a/.gitignore
+++ b/.gitignore
@@ -316,3 +316,6 @@ __pycache__/
 *.btm.cs
 *.odx.cs
 *.xsd.cs
+
+/HelpDesk_Web/HelpDesk/HelpDesk/App_Data/db.mdf.old
+/HelpDesk_Web/HelpDesk/HelpDesk/App_Data/db_log.ldf.old
