--- a/HelpDesk_Web/HelpDesk/HelpDesk/HelpDesk.csproj
+++ b/HelpDesk_Web/HelpDesk/HelpDesk/HelpDesk.csproj
@@ -212,13 +212,19 @@
     <Compile Include="Migrations\201805120729342_DodanieAdminaDoTabeliKategorii.Designer.cs">
       <DependentUpon>201805120729342_DodanieAdminaDoTabeliKategorii.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201805142118093_DodanieModeluDlaWiadomosci.cs" />
+    <Compile Include="Migrations\201805142118093_DodanieModeluDlaWiadomosci.Designer.cs">
+      <DependentUpon>201805142118093_DodanieModeluDlaWiadomosci.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Kategorie.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Statusy.cs" />
+    <Compile Include="Models\Wiadomosci.cs" />
     <Compile Include="Models\Zgloszenia.cs" />
+    <Compile Include="MojeHaslo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -245,7 +251,9 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -284,6 +292,7 @@
     <Content Include="Views\Zgloszenias\Details.cshtml" />
     <Content Include="Views\Zgloszenias\Edit.cshtml" />
     <Content Include="Views\Zgloszenias\Index.cshtml" />
+    <Content Include="Views\Home\admin.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -313,6 +322,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201805120729342_DodanieAdminaDoTabeliKategorii.resx">
       <DependentUpon>201805120729342_DodanieAdminaDoTabeliKategorii.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805142118093_DodanieModeluDlaWiadomosci.resx">
+      <DependentUpon>201805142118093_DodanieModeluDlaWiadomosci.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
