HelpDesk_Desktop: Panel administratora 100%

--- a/HelpDesk_Desktop/HelpDesk/WindowsFormsApplication1/Helpdesk_Desktop.csproj
+++ b/HelpDesk_Desktop/HelpDesk/WindowsFormsApplication1/Helpdesk_Desktop.csproj
@@ -14,7 +14,7 @@
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <IsWebBootstrapper>false</IsWebBootstrapper>
-    <PublishUrl>C:\Users\Karol\Desktop\</PublishUrl>
+    <PublishUrl>C:\Users\Karol\Desktop\sss\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
@@ -24,7 +24,7 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>2</ApplicationRevision>
+    <ApplicationRevision>3</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -113,6 +113,12 @@
     <Compile Include="User.Designer.cs">
       <DependentUpon>User.cs</DependentUpon>
     </Compile>
+    <Compile Include="Wiadomosci.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Wiadomosci.Designer.cs">
+      <DependentUpon>Wiadomosci.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Admin.resx">
       <DependentUpon>Admin.cs</DependentUpon>
     </EmbeddedResource>
@@ -133,6 +139,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="User.resx">
       <DependentUpon>User.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Wiadomosci.resx">
+      <DependentUpon>Wiadomosci.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="App.Config" />
     <None Include="dbDataSet.xsc">
