HelpDesk Desktop: Panel Specjalisty 100%, Cały program 99%

--- a/HelpDesk_Desktop/HelpDesk/WindowsFormsApplication1/Helpdesk_Desktop.csproj
+++ b/HelpDesk_Desktop/HelpDesk/WindowsFormsApplication1/Helpdesk_Desktop.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{1A8EC188-66B8-4B32-80C1-893E563FE640}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WindowsFormsApplication1</RootNamespace>
-    <AssemblyName>WindowsFormsApplication1</AssemblyName>
+    <RootNamespace>HelpDesk_Desktop</RootNamespace>
+    <AssemblyName>HelpDesk_Desktop</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -24,7 +24,7 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>3</ApplicationRevision>
+    <ApplicationRevision>5</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -133,6 +133,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="Specjalista.resx">
       <DependentUpon>Specjalista.cs</DependentUpon>
